--- a/catalog/templates/catalog/homepage.html
+++ b/catalog/templates/catalog/homepage.html
@@ -5,32 +5,33 @@
 {% block title %}Главная страница{% endblock %}
 
 {% block content %}
-    <h1>Добро пожаловать в интернет-магазин!</h1>
+<h1>Добро пожаловать в интернет-магазин!</h1>
 
-    <form method="get" action="">
-        <input type="text" name="search" placeholder="Поиск товаров..." value="{{ request.GET.search }}">
-        <button type="submit">Найти</button>
-    </form>
+<form method="get" action="">
+    <input type="text" name="search" placeholder="Поиск товаров..." value="{{ request.GET.search }}">
+    <button type="submit">Найти</button>
+</form>
 
-    <h2>Список товаров</h2>
-    <div>
-        {% for product in page_obj %}
-            <div class="product-card">
-                <h3>{{ product.name }}</h3>
-                <p>{{ product.description|slice:":100" }}{% if product.description|length > 100 %}...{% endif %}</p>
-                <p>Цена: {{ product.price }} руб.</p>
-                <img class="card-img-top" src="{{ product.image|mymedia }}" alt="{{ product.name }}">
+<h2>Список товаров</h2>
+<div>
+    {% for product in page_obj %}
+    <div class="product-card">
+        <h3>{{ product.name }}</h3>
+        <p>{{ product.description|slice:":100" }}{% if product.description|length > 100 %}...{% endif %}</p>
+        <p>Цена: {{ product.price }} руб.</p>
+        <img class="card-img-top" src="{{ product.image|mymedia }}" alt="{{ product.name }}">
 
-                {% if products_with_versions|get_item:product.pk %}
-                    <p><strong>Версия:</strong> {{ products_with_versions|get_item:product.pk.version_name }} ({{ products_with_versions|get_item:product.pk.version_number }})</p>
-                {% endif %}
-            </div>
-        {% empty %}
-            <p>Товары отсутствуют.</p>
-        {% endfor %}
+        {% if products_with_versions|get_item:product.pk %}
+        <p><strong>Версия:</strong> {{ products_with_versions|get_item:product.pk.version_name }} ({{
+            products_with_versions|get_item:product.pk.version_number }})</p>
+        {% endif %}
     </div>
+    {% empty %}
+    <p>Товары отсутствуют.</p>
+    {% endfor %}
+</div>
 
-    <div class="pagination">
+<div class="pagination">
         <span class="step-links">
             {% if page_obj.has_previous %}
                 <a href="?page=1">Первая</a>
@@ -46,5 +47,5 @@
                 <a href="?page={{ page_obj.paginator.num_pages }}">Последняя</a>
             {% endif %}
         </span>
-    </div>
+</div>
 {% endblock %}
